--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "add": "^2.0.6",
     "csvtojson": "^2.0.10",
+    "json2csv": "^5.0.1",
     "react": "^16.13.1",
     "react-barcode-reader": "^0.0.2",
     "react-dom": "^16.13.1",
